[workspace]
members = ["common", "lz4-compress", "jemallocator", "preload", "cli-core", "cli", "server-core", "gather", "integration-tests"]

[profile.dev]
opt-level = 2
incremental = true

[profile.release]
opt-level = 3
lto = true
panic = "abort"
debug = true

[patch.crates-io]
gimli = { git = "https://github.com/gimli-rs/gimli.git", rev = "4ea297a" }
