[workspace]
members = ["common", "lz4-compress", "jemallocator/jemalloc-sys", "preload", "cli-core", "cli", "server-core", "gather", "integration-tests", "mimalloc_rust", "fast_range_map"]
resolver = "2"

[profile.dev]
opt-level = 2
incremental = true

[profile.release]
opt-level = 3
lto = true
panic = "abort"
debug = true
