[package]
name = "cli-core"
version = "0.5.0"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2018"

[dependencies]
byteorder = "1"
ctrlc = "3"
goblin = "0.0.24"
string-interner = { version = "0.7", default-features = false }
cpp_demangle = "0.2"
chrono = "0.4"
libc = "0.2"
log = "0.4"
lru = "0.6"
bitflags = "1"
inferno = { version = "0.9", default-features = false }
lazy_static = "1"
ahash = "0.7"
parking_lot = "0.11"
crossbeam-channel = "0.3"

common = { path = "../common" }
lz4-compress = { path = "../lz4-compress" }

[dependencies.nwind]
git = "https://github.com/koute/not-perf.git"
rev = "6a041ec"

[dev-dependencies]
quickcheck = "0.9"
