[package]
name = "cli-core"
version = "0.8.0"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2018"

[dependencies]
smallvec = "1"
byteorder = "1"
ctrlc = "3"
goblin = "0.0.24"
string-interner = { version = "0.7", default-features = false }
cpp_demangle = "0.2"
chrono = "0.4"
libc = "0.2"
log = "0.4"
lru = "0.6"
bitflags = "1"
inferno = { version = "0.9", default-features = false }
lazy_static = "1"
ahash = "0.7"
parking_lot = "0.11"
crossbeam-channel = "0.5"
rayon = "1"
regex = "1"
rhai = { version = "1", features = ["unchecked"] }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "all_series"] }
colorgrad = "0.4"
serde_json = "1"

common = { path = "../common" }
lz4-compress = { path = "../lz4-compress" }

[dependencies.nwind]
git = "https://github.com/koute/not-perf.git"
rev = "20e4ddc"

[dev-dependencies]
quickcheck = "0.9"
