[package]
name = "cli-core"
version = "0.11.0"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2018"

[dependencies]
smallvec = "1"
byteorder = "1"
ctrlc = "3"
goblin = "0.6.1"
string-interner = { version = "0.7", default-features = false }
cpp_demangle = "0.4"
chrono = "0.4"
libc = "0.2"
log = "0.4"
lru = "0.10"
bitflags = "1"
inferno = { version = "0.11", default-features = false }
lazy_static = "1"
ahash = "0.8"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1"
regex = "1"
rhai = { version = "1", features = ["unchecked"] }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "all_series"] }
colorgrad = "0.6"
serde_json = "1"
derive_more = "0.99"

common = { path = "../common" }
lz4-compress = { path = "../lz4-compress" }
fast_range_map = { path = "../fast_range_map" }

[dependencies.nwind]
git = "https://github.com/koute/not-perf.git"
rev = "911723c"

[dev-dependencies]
quickcheck = "0.9"
