[package]
name = "bytehound-cli"
version = "0.11.0"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2018"

[[bin]]
name = "bytehound"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.10"
structopt = "0.3"
cli-core = { path = "../cli-core" }
server-core = { path = "../server-core", optional = true }
tikv-jemallocator = "0.4"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["subcommand-server"]
subcommand-server = ["server-core"]
