[package]
name = "fast_range_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.13", features = ["raw"] }

[dev-dependencies]
criterion = "0.4"
btree-range-map = "0.3.0"
oorandom = "11.1.3"
rangemap = "1.3.0"

[[bench]]
name = "rangemaps"
harness = false
