[package]
name = "preload-syscallee"
version = "0.9.0"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2018"

[dependencies]
parking_lot = { version = "0.12" }
libc = "0.2"
sc = { version = "0.2", optional = true }
lazy_static = "1"
memmap = "0.7"
log = "0.4"
glob = "0.2"
lru = { version = "0.6", default-features = false }
tikv-jemallocator = { path = "../jemallocator", default-features = false }
tikv-jemalloc-sys = { path = "../jemallocator/jemalloc-sys", default-features = false }
goblin = "0.0.24"
smallvec = { version = "1", features = ["union"] }

[dependencies.thread-local-reentrant]
git = "https://github.com/koute/not-perf.git"
rev = "18bd8d3"

[dependencies.nwind]
git = "https://github.com/koute/not-perf.git"
rev = "18bd8d3"
features = ["log", "local-unwinding"]
default-features = false

[dependencies.perf_event_open]
git = "https://github.com/koute/not-perf.git"
rev = "18bd8d3"

[dependencies.common]
path = "../common"

[features]
default = []
debug-logs = ["nwind/debug-logs", "nwind/addr2line"]
nightly = ["parking_lot/nightly"]
jemalloc = []
