[package]
name = "memory-profiler"
version = "0.4.0"
authors = ["Jan Bujak <jan.bujak@nokia.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
parking_lot = { version = "0.9" }
libc = "0.2"
sc = { version = "0.2", optional = true }
lazy_static = "1"
memmap = "0.7"
log = "0.4"
glob = "0.2"
jemallocator = { path = "../jemallocator", default-features = false }
jemalloc-sys = { path = "../jemallocator/jemalloc-sys", default-features = false }

[dependencies.nwind]
git = "https://github.com/nokia/not-perf.git"
rev = "8785cc8"
features = ["log", "local-unwinding"]
default-features = false

[dependencies.perf_event_open]
git = "https://github.com/nokia/not-perf.git"
rev = "8785cc8"

[dependencies.common]
path = "../common"

[features]
default = []
debug-logs = ["nwind/debug-logs", "nwind/addr2line"]
nightly = ["parking_lot/nightly"]
jemalloc = []
