[package]
name = "memory-profiler"
version = "0.6.1"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
parking_lot = { version = "0.11" }
libc = "0.2"
sc = { version = "0.2", optional = true }
lazy_static = "1"
memmap = "0.7"
log = "0.4"
glob = "0.2"
lru = { version = "0.6", default-features = false }
jemallocator = { path = "../jemallocator", default-features = false }
jemalloc-sys = { path = "../jemallocator/jemalloc-sys", default-features = false }

[dependencies.nwind]
git = "https://github.com/koute/not-perf.git"
rev = "38c1a6a"
features = ["log", "local-unwinding"]
default-features = false

[dependencies.perf_event_open]
git = "https://github.com/koute/not-perf.git"
rev = "38c1a6a"

[dependencies.common]
path = "../common"

[features]
default = []
debug-logs = ["nwind/debug-logs", "nwind/addr2line"]
nightly = ["parking_lot/nightly"]
jemalloc = []
