[package]
name = "server-core"
version = "0.11.0"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2018"

[dependencies]
log = "0.4"
actix = "0.8"
actix-web = { version = "1.0", default-features = false }
actix-cors = "0.1"
serde = "1"
serde_json = "1"
serde_derive = "1"
cli-core = { path = "../cli-core" }
futures = "0.1"
serde_urlencoded = "0.5"
regex = "1"
bytes = "0.4"
lru = "0.10"
parking_lot = "0.12"
common = { path = "../common" }
ahash = "0.8"
rayon = "1"
md5 = "0.7"

[build-dependencies]
semalock = "0.2"
