[package]
name = "server-core"
version = "0.11.0"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2018"

[dependencies]
log = "0.4"
actix-web = { version = "4.3", default-features = false }
actix-cors = "0.6"
serde = "1"
serde_json = "1"
serde_derive = "1"
cli-core = { path = "../cli-core" }
futures = "0.3"
serde_urlencoded = "0.5"
regex = "1"
bytes = "1.4"
lru = "0.10"
parking_lot = "0.12"
common = { path = "../common" }
ahash = "0.8"
rayon = "1"
md5 = "0.7"
futures-core = "0.3.27"

[build-dependencies]
semalock = "0.3"
