[package]
name = "jemalloc-sys"
version = "0.1.7"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
links = "jemalloc"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/jemallocator"
homepage = "https://github.com/alexcrichton/jemallocator"
documentation = "https://docs.rs/jemallocator-sys"
keywords = ["allocator"]
description = """
Rust FFI bindings to jemalloc
"""

[lib]
test = false
bench = false

[dependencies]
libc = "0.2.8"

[build-dependencies]
cc = "^1.0.13"
fs_extra = "^1.1"

[features]
default = ["bg_thread"]
profiling = []
debug = []
bg_thread = []
stats = []
unprefixed_malloc_on_supported_platforms = []
