[package]
name = "jemalloc-v05-unprefixed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = { version = "0.5.0", features = ["unprefixed_malloc_on_supported_platforms"] }
jemalloc-common = { path = "../jemalloc-common" }

[workspace]
